force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/ArdiraSurvey__Survey_Workflow_Stage__c.object-meta.xml
<CustomObject>
    <description>This object stores information about survey stages.</description>
    <label>Ardira Survey Workflow Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Survey Workflow Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>