force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Accepted_Question_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Accepted_Question_Authorization__c</fullName>
    <description>You can select authorization setting to control how accepted questions are presented in this stage of the workflow.</description>
    <inlineHelpText>With Accepted Question Authorization, you have the ability to control the authorization settings for how accepted questions are presented to stakeholders within this specific stage of the workflow. This configuration allows you to define and manage who has the permission to view and interact with accepted questions, ensuring that only authorized individuals can access and engage with them.</inlineHelpText>
    <label>Accepted Question Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
                <default>true</default>
                <label>Read Only</label>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>