force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Action_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Label__c</fullName>
    <description>Action label to use for this workflow stage e.g. Respond or Review.</description>
    <inlineHelpText>Action Label refers to the label assigned to a stage action within a workflow. It is typically used to indicate the desired action to be taken at that particular stage. For example, in a survey workflow, the Action Label for a stage where participants need to respond to the survey questions could be &quot;Respond&quot;, while the Action Label for a stage where survey responses are reviewed could be &quot;Review&quot;.</inlineHelpText>
    <label>Action Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>