force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Advance_Survey_Workflow_on_Submit__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advance_Survey_Workflow_on_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, when a survey is submitted in this stage, advance the survey workflow to next or previous stage and move the survey status to &quot;In Progress&quot;. When disabled, do not advance workflow and set status to &quot;Completed&quot;.</description>
    <inlineHelpText>By enabling the Survey Workflow Advancement on Submit feature, you can automate the progression of the survey workflow when a survey is submitted within this stage. When this setting is enabled, the survey workflow will automatically advance to the next or previous stage, depending on your configuration, and update the survey status to &quot;In Progress.&quot; On the other hand, when the feature is disabled, the workflow will not advance, and the survey status will be set to Completed.</inlineHelpText>
    <label>Survey Workflow Advancement on Submit</label>
    <type>Checkbox</type>
</CustomField>