force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Assessment_Fields__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assessment_Fields__c</fullName>
    <description>You can review the question response and based on the assessment criteria, you can update one or more assessment fields.</description>
    <inlineHelpText>You can review the question response and based on the assessment criteria, you can update one or more assessment fields.</inlineHelpText>
    <label>Assessment Fields</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>