force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Authorized_Users_Can_View_and_Update__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Authorized_Users_Can_View_and_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, system will use authorization configuration to allow users to view or update responses.</description>
    <inlineHelpText>When this feature is enabled, SurveyVista utilizes an advanced stakeholders configuration, granting authorized users the ability to view and update responses within the context of the workflow stage. With Stakeholders Response Access, you have complete control over who can access and modify survey data, ensuring the utmost security and privacy for your valuable information.</inlineHelpText>
    <label>Stakeholder Response Access</label>
    <type>Checkbox</type>
</CustomField>