force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Label__c</fullName>
    <description>Label to use for this workflow stage e.g. In Progress or In Review.</description>
    <label>Stage Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>