force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Logical_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Logical_Id__c</fullName>
    <description>Unique identifier for a survey workflow stage.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for a survey workflow stage.</inlineHelpText>
    <label>Logical Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>