force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Rank__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Rank__c</fullName>
    <description>Rank order of this stage in the workflow.</description>
    <inlineHelpText>The Rank refers to the position or order of a stage within the workflow. It determines the sequence in which the stages are presented or processed. A lower rank number indicates an earlier stage in the workflow, while a higher rank number indicates a later stage. The Rank helps establish the flow and progression of the workflow stages.</inlineHelpText>
    <label>Stage Rank</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>