force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Submit_Button_Display_Options__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Submit_Button_Display_Options__c</fullName>
    <defaultValue>&quot;Show at Last Page&quot;</defaultValue>
    <description>When to display submit button.</description>
    <inlineHelpText>Last Page Only - When selected, the submit button will appear exclusively on the last page of the survey.
Every Page - When chosen, the submit button will be consistently visible on all pages of the survey.
Conditional All Pages - With this option, the submit button will be shown on all pages if a participant is rejected from progressing to the next stage based on their previous responses.</inlineHelpText>
    <label>Submit Button Display Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show at Last Page</fullName>
                <default>true</default>
                <label>Last Page Only</label>
            </value>
            <value>
                <fullName>Show at All Pages</fullName>
                <label>Every Page</label>
            </value>
            <value>
                <fullName>Show at All Pages when Rejected from Next Stage</fullName>
                <label>Conditional All Pages</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>