force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Submit_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Submit_Button_Label__c</fullName>
    <description>Label to use for the &apos;submit&apos; button in the survey response interface.</description>
    <inlineHelpText>This setting allows you to specify the label for the &apos;submit&apos; button in the survey response interface. The submit button serves as the final action for participants to submit their survey responses. By providing a clear and concise label, you can enhance user understanding and encourage them to complete the survey.</inlineHelpText>
    <label>Submit Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>