force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Submit_Confirmation_Cancel_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Submit_Confirmation_Cancel_Button_Label__c</fullName>
    <description>You can change the Cancel button label for the confirmation popup.</description>
    <inlineHelpText>This setting allows you to customize the label for the &quot;Cancel&quot; button in the confirmation popup that appears after participants submit their survey responses. The &quot;Cancel&quot; button is typically used to cancel or dismiss the confirmation popup without submitting the responses.</inlineHelpText>
    <label>Submit Confirmation Cancel Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>