force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Submit_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Submit_Confirmation_Message__c</fullName>
    <description>To show a confirmation confirmation popup message on the submit button click, enter the confirmation message here. If a message is not specified, confirmation popup will not be displayed.</description>
    <inlineHelpText>This setting allows you to specify a confirmation message that will be displayed in a popup when participants click on the submit button. The confirmation message serves as a visual acknowledgment and appreciation for participants&apos; completion of the survey. If no message is specified, the confirmation popup will not be displayed.</inlineHelpText>
    <label>Submit Confirmation Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>