force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Submit_Confirmation_Ok_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Submit_Confirmation_Ok_Button_Label__c</fullName>
    <description>You can change the Ok button label for the confirmation popup.</description>
    <inlineHelpText>This setting allows you to customize the label for the &quot;Ok&quot; button in the confirmation popup that appears after participants submit their survey responses. The &quot;Ok&quot; button is typically used to acknowledge and close the confirmation message.</inlineHelpText>
    <label>Submit Confirmation Ok Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>