force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__User_Can_Update_Assessment_Fields__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__User_Can_Update_Assessment_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, a user with write access to the survey result can update assessment fields. If disabled, a user will see assessment fields in read only mode.</description>
    <inlineHelpText>When enabled, a user with write access to the survey result can update assessment fields. If disabled, a user will see assessment fields in read only mode.</inlineHelpText>
    <label>User can update assessment fields</label>
    <type>Checkbox</type>
</CustomField>