force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Users_With_Read_Access_Can_View__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Users_With_Read_Access_Can_View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, a user with read access to a survey result record can view responses.</description>
    <inlineHelpText>When Salesforce Record View Authorization is enabled, SurveyVista seamlessly integrates with Salesforce&apos;s robust authorization framework to control access to survey result records. When Salesforce Record View Authorization is enabled, users who possess read access to a survey result record gain the ability to view responses within the context of the workflow stage.</inlineHelpText>
    <label>Salesforce Record View Authorization</label>
    <type>Checkbox</type>
</CustomField>