force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Users_With_Write_Access_Can_Submit__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Users_With_Write_Access_Can_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, a user with write access to a survey result record can submit responses.</description>
    <inlineHelpText>When enabled, a user with write access to a survey result record can submit responses.</inlineHelpText>
    <label>Users With Write Access Can Submit</label>
    <type>Checkbox</type>
</CustomField>