force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Stage__c/fields/ArdiraSurvey__Users_With_Write_Access_Can_Update__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Users_With_Write_Access_Can_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, a user with write access to a survey result record can update responses.</description>
    <inlineHelpText>When Salesforce Record Update Authorization is enabled, SurveyVista seamlessly integrates with Salesforce&apos;s robust authorization framework to control access to survey result records. When Salesforce Record Update Authorization is enabled, users who possess update access to a survey result record gain the ability to update responses within the context of the workflow stage.</inlineHelpText>
    <label>Salesforce Record Update Authorization</label>
    <type>Checkbox</type>
</CustomField>